# route-planner

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  fix-svg.md  pyproject.toml
assets/: screencast.webm
backend/: Dockerfile  __init__.py  config.py  db.py  graph.py  main.py  models.py  planner.py  solver.py  trace.py
backend/tests/: conftest.py  test_app_smoke.py  test_graph_api.py  test_planner_api.py  test_solver_api.py  test_trace_api.py
docs/: demo-runbook.md
docs/plans/: 2026-03-31-route-planner-design.md  2026-03-31-route-planner-implementation.md  2026-03-31-trace-explanation-implementation.md  2026-04-01-llm-candidate-selection-design.md  2026-04-01-llm-candidate-selection-implementation.md  2026-04-01-node-preferences-design.md  2026-04-01-node-preferences-implementation.md  2026-04-01-route-trace-facts.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.test.ts  App.vue  api.ts  types.ts
frontend/src/stores/: explanation.ts  graph.ts  run.ts  trace.ts
plan/: index.md  step-01-foundation.md  step-02-graph-state.md  step-03-solver-api.md  step-04-trace-persistence.md  step-05-llm-orchestration.md  step-06-frontend-core.md  step-07-trace-ui.md  step-08-hardening.md
