[project]
name = "route-planner"
version = "0.1.0"
description = "Explainable route planner demo"
requires-python = ">=3.11"
dependencies = [
  "anthropic>=0.51.0",
  "fastapi>=0.115.0",
  "httpx>=0.28.0",
  "ortools>=9.12.0",
  "pydantic-settings>=2.8.0",
  "sqlmodel>=0.0.24",
  "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3.0",
]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["."]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["backend*"]
